--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/03_Grouping/Occupation/Exercise.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -53,8 +53,8 @@
    "source": [
     "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user\"\n",
     "users = pd.read_csv(url, sep='|')\n",
-    "user2 = users\n",
-    "user3 = users"
+    "#user2 = users\n",
+    "#user3 = users"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -150,13 +150,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user2['is_male'] = user2.gender.apply(lambda x: True if x == 'M' else False)\n",
+    "user2['is_male'] = users.gender.apply(lambda x: True if x == 'M' else False)\n",
     "user2.is_male\n",
     "(user2.groupby('occupation').is_male.sum() / user2.groupby('occupation').gender.count() * 100).sort_values(ascending = False)"
    ]
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
        "writer          18   60"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -412,7 +412,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -439,157 +439,58 @@
      "data": {
       "text/plain": [
        "occupation     gender\n",
-       "administrator  F          36\n",
-       "               M          43\n",
-       "artist         F          13\n",
-       "               M          15\n",
-       "doctor         M           7\n",
-       "educator       F          26\n",
-       "               M          69\n",
-       "engineer       F           2\n",
-       "               M          65\n",
-       "entertainment  F           2\n",
-       "               M          16\n",
-       "executive      F           3\n",
-       "               M          29\n",
-       "healthcare     F          11\n",
-       "               M           5\n",
-       "homemaker      F           6\n",
-       "               M           1\n",
-       "lawyer         F           2\n",
-       "               M          10\n",
-       "librarian      F          29\n",
-       "               M          22\n",
-       "marketing      F          10\n",
-       "               M          16\n",
-       "none           F           4\n",
-       "               M           5\n",
-       "other          F          36\n",
-       "               M          69\n",
-       "programmer     F           6\n",
-       "               M          60\n",
-       "retired        F           1\n",
-       "               M          13\n",
-       "salesman       F           3\n",
-       "               M           9\n",
-       "scientist      F           3\n",
-       "               M          28\n",
-       "student        F          60\n",
-       "               M         136\n",
-       "technician     F           1\n",
-       "               M          26\n",
-       "writer         F          19\n",
-       "               M          26\n",
-       "Name: gender, dtype: int64"
+       "administrator  F          45.569620\n",
+       "               M          54.430380\n",
+       "artist         F          46.428571\n",
+       "               M          53.571429\n",
+       "doctor         M         100.000000\n",
+       "educator       F          27.368421\n",
+       "               M          72.631579\n",
+       "engineer       F           2.985075\n",
+       "               M          97.014925\n",
+       "entertainment  F          11.111111\n",
+       "               M          88.888889\n",
+       "executive      F           9.375000\n",
+       "               M          90.625000\n",
+       "healthcare     F          68.750000\n",
+       "               M          31.250000\n",
+       "homemaker      F          85.714286\n",
+       "               M          14.285714\n",
+       "lawyer         F          16.666667\n",
+       "               M          83.333333\n",
+       "librarian      F          56.862745\n",
+       "               M          43.137255\n",
+       "marketing      F          38.461538\n",
+       "               M          61.538462\n",
+       "none           F          44.444444\n",
+       "               M          55.555556\n",
+       "other          F          34.285714\n",
+       "               M          65.714286\n",
+       "programmer     F           9.090909\n",
+       "               M          90.909091\n",
+       "retired        F           7.142857\n",
+       "               M          92.857143\n",
+       "salesman       F          25.000000\n",
+       "               M          75.000000\n",
+       "scientist      F           9.677419\n",
+       "               M          90.322581\n",
+       "student        F          30.612245\n",
+       "               M          69.387755\n",
+       "technician     F           3.703704\n",
+       "               M          96.296296\n",
+       "writer         F          42.222222\n",
+       "               M          57.777778\n",
+       "Name: gender, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user3.groupby(['occupation','gender']).gender.count()"
+    "(users.groupby(['occupation','gender']).gender.count() / users.groupby('occupation').gender.count()) * 100"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "occupation     gender\n",
-       "administrator  F          36\n",
-       "               M          43\n",
-       "artist         F          13\n",
-       "               M          15\n",
-       "doctor         M           7\n",
-       "educator       F          26\n",
-       "               M          69\n",
-       "engineer       F           2\n",
-       "               M          65\n",
-       "entertainment  F           2\n",
-       "               M          16\n",
-       "executive      F           3\n",
-       "               M          29\n",
-       "healthcare     F          11\n",
-       "               M           5\n",
-       "homemaker      F           6\n",
-       "               M           1\n",
-       "lawyer         F           2\n",
-       "               M          10\n",
-       "librarian      F          29\n",
-       "               M          22\n",
-       "marketing      F          10\n",
-       "               M          16\n",
-       "none           F           4\n",
-       "               M           5\n",
-       "other          F          36\n",
-       "               M          69\n",
-       "programmer     F           6\n",
-       "               M          60\n",
-       "retired        F           1\n",
-       "               M          13\n",
-       "salesman       F           3\n",
-       "               M           9\n",
-       "scientist      F           3\n",
-       "               M          28\n",
-       "student        F          60\n",
-       "               M         136\n",
-       "technician     F           1\n",
-       "               M          26\n",
-       "writer         F          19\n",
-       "               M          26\n",
-       "Name: gender, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user2.groupby(['occupation','gender']).gender.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     user_id  age gender     occupation zip_code  is_male\n",
-      "0          1   24      M     technician    85711     True\n",
-      "1          2   53      F          other    94043    False\n",
-      "2          3   23      M         writer    32067     True\n",
-      "3          4   24      M     technician    43537     True\n",
-      "4          5   33      F          other    15213    False\n",
-      "..       ...  ...    ...            ...      ...      ...\n",
-      "938      939   26      F        student    33319    False\n",
-      "939      940   32      M  administrator    02215     True\n",
-      "940      941   20      M        student    97229     True\n",
-      "941      942   48      F      librarian    78209    False\n",
-      "942      943   22      M        student    77841     True\n",
-      "\n",
-      "[943 rows x 6 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(users)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
